Modificacion en titulo y navbar

--- a/frontend/css/estilos.css
+++ b/frontend/css/estilos.css
@@ -18,6 +18,8 @@ body {
     background: url(/frontend/img/imagen-archivo-libros_69.jpg) no-repeat center/cover;
 }
 
+/* Index */
+
 .btn {
     transition: .5s;
     font-weight: 500;
