--- a/CrudLibrary/app/src/main/res/layout/fragment_guardar_usuario.xml
+++ b/CrudLibrary/app/src/main/res/layout/fragment_guardar_usuario.xml
@@ -2,33 +2,30 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragmantRegistroLibro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GuardarLibroFragment">
+    tools:context=".GuardarUsuarioFragment">
+
+    <!-- TODO: Update blank fragment layout -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="408dp"
-            android:layout_height="683dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            android:padding="30dp">
 
             <LinearLayout
-                android:layout_width="118dp"
-                android:layout_height="wrap_content"
+                android:layout_width="134dp"
+                android:layout_height="70dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btnVolver"
-                    android:layout_width="58dp"
+                    android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="#00FF9800"
@@ -39,101 +36,75 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/lblTitulo"
+                android:id="@+id/lblNombres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/lbltitulo"
-                android:textSize="16sp" />
+                android:text="Nombres:"
+                android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/titulo"
+                android:id="@+id/nombres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text" />
 
             <TextView
-                android:id="@+id/lblAutor"
+                android:id="@+id/lblDireccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/lblAutor"
-                android:textSize="16sp" />
+                android:text="Direccion:"
+                android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/autor"
+                android:id="@+id/direccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text" />
 
             <TextView
+                android:id="@+id/lblCorreo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/lblIsbn"
-                android:textSize="16sp" />
+                android:text="Correo:"
+                android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/isbn"
+                android:id="@+id/correo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text" />
 
             <TextView
-                android:id="@+id/lblGenero"
-                android:layout_width="wrap_content"
+                android:id="@+id/lbltipoUsuario"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/lblGenero"
-                android:textSize="16sp" />
+                android:text="Tipo de usuario:"
+                android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/genero"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text" />
-
-            <TextView
-                android:id="@+id/lblNumeroDisponible"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lblNumeroDisponibles"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/numero_disponible"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text" />
-
-            <TextView
-                android:id="@+id/lblNumeroOcupado"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lblNumeroOcupados"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/numero_ocupado"
+                android:id="@+id/tipoUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text" />
 
             <LinearLayout
-                android:layout_width="350dp"
-                android:layout_height="79dp"
+                android:layout_width="match_parent"
+                android:layout_height="88dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btnGuardar"
-                    android:layout_width="108dp"
+                    android:layout_width="148dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="#FF9800"
                     android:text="Guardar"
-                    android:textColor="#020202"
+                    android:textColor="#070707"
+                    android:textSize="16sp"
                     app:icon="@drawable/save_floppy_svgrepo_com"
                     app:iconSize="30dp"
                     app:iconTint="#000000" />
@@ -141,14 +112,21 @@
                 <Button
                     android:id="@+id/btnLista"
                     android:layout_width="wrap_content"
-                    android:layout_height="79dp"
+                    android:layout_height="89dp"
                     android:layout_weight="1"
                     android:backgroundTint="#FF9800"
                     android:text="Lista"
                     android:textColor="#000000"
+                    android:textSize="16sp"
                     app:icon="@drawable/list_svgrepo_com"
                     app:iconSize="30dp"
                     app:iconTint="#000000" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="89dp"
+                android:orientation="horizontal">
 
             </LinearLayout>
 
