--- a/CrudLibrary/app/src/main/res/layout/fragment_lista_usuario.xml
+++ b/CrudLibrary/app/src/main/res/layout/fragment_lista_usuario.xml
@@ -7,9 +7,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="205dp">
+        android:layout_height="match_parent">
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RVUsuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
