--- a/CrudLibrary/app/src/main/res/layout/item_usuario.xml
+++ b/CrudLibrary/app/src/main/res/layout/item_usuario.xml
@@ -67,7 +67,7 @@
                         android:orientation="vertical">
 
                         <Button
-                            android:id="@+id/button"
+                            android:id="@+id/btnEditar"
                             android:layout_width="wrap_content"
                             android:layout_height="68dp"
                             android:backgroundTint="#8BC34A"
